provisioning/kubernetes-manifests/configuration/search/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: search-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/issuer: letsencrypt-prod
spec:
  rules:
    - host: search.<insert-environment-base-domain-here>
      http:
        paths:
          - backend:
              serviceName: search
              servicePort: main-port
            path: /
  tls:
    - hosts:
        - search.<insert-environment-base-domain-here>
      secretName: search-ingress-cert # cert-manager will populate this.
